# xcal

./: .clang-format  .gitignore  .gitmodules  CHAT_CONTRIBUTING.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Doxyfile  LICENSE  README.md
.github/workflows/: deploy-docs.yml
docs/: doxygen-dark-theme.css
res/: line.fs  line.vs
src/: CMakeLists.txt  main.cc  public.h
src/camera/core/: abs_camera.hpp  frame.hpp  orthocamera.hpp  perspectivecamera.hpp
src/mobject/: mobject.hpp  mobject_all.hpp  property.hpp
src/mobject/core/: abs_mobject.hpp  absmobject.hpp  mobject.hpp  mobject_types.hpp  property.hpp
src/mobject/objects/: circle.hpp  ellipse.hpp  line.hpp  path.hpp  polygone.hpp  rectangle.hpp
src/mobject/properties/: color.hpp  position.hpp  position_list.hpp  time_point.hpp
src/mobject/property/: color.cc  position.hpp  position_list.hpp  scalar.hpp  time_duration.hpp  time_point.hpp
src/property/: color.hpp  position.hpp  position_list.hpp  scalar.hpp  time_duration.hpp  time_point.hpp
src/property/core/: property.hpp
src/render/core/: abs_render.cc  abs_render.hpp  render.hpp
src/render/impl/opengl/: opengl_render.cc  opengl_render.hpp
src/render/impl/opengl/core/: typedef.hpp
src/render/impl/opengl/gl/: buffer.cc  buffer.hpp  shader.cc  shader.hpp  shaderprogram.cc  shaderprogram.hpp  vertexarrayobject.cc  vertexarrayobject.hpp
src/render/impl/opengl/object/: line.cc  line.hpp  object.cc  object.hpp
src/scene/: scene.hpp
src/scene/core/: abs_frame.hpp  abs_scene.hpp  absscene.hpp  frame.hpp  scene.hpp
src/utils/: logmacrohelper.inc
tests/: CMakeLists.txt  opengl.cc
tests/camera/: CMakeLists.txt  test_perspective_camera.cc
tests/mobject/: CMakeLists.txt  test_circle.cc  test_mobject.cc
tests/properties/: CMakeLists.txt  test_color.cc  test_time_duration.cc  test_time_point.cc
tests/scene/: CMakeLists.txt  scene.cc  test_scene.cc
tools/: format-code.ps1  format-code.sh
xcal/: CMakeLists.txt  main.cc  public.h
xcal/animation/core/: abs_animation.hpp
xcal/camera/: orthocamera.hpp  perspectivecamera.cc  perspectivecamera.hpp
xcal/camera/core/: abs_camera.cc  abs_camera.hpp  frame.hpp  perspectivecamera.hpp
xcal/mobject/: mobject.hpp  mobject_all.hpp
xcal/mobject/core/: abs_mobject.hpp  mobject.hpp  mobject_types.hpp
xcal/mobject/objects/: circle.hpp  ellipse.hpp  line.hpp  path.hpp  polygone.hpp  rectangle.hpp
xcal/property/: color.cc  color.hpp  position.hpp  position_list.hpp  scalar.hpp  time_duration.hpp  time_point.hpp  vec.hpp
xcal/property/core/: property.hpp
xcal/render/core/: abs_render.cc  abs_render.hpp  render.hpp
xcal/render/impl/opengl/: opengl_render.cc  opengl_render.hpp
xcal/render/impl/opengl/core/: typedef.hpp
xcal/render/impl/opengl/gl/: buffer.cc  buffer.hpp  shader.cc  shader.hpp  shaderprogram.cc  shaderprogram.hpp  vertexarrayobject.cc  vertexarrayobject.hpp
xcal/render/impl/opengl/object/: circle.cc  circle.hpp  line.cc  line.hpp  object.cc  object.hpp
xcal/render/impl/opengl/utils/: glbindingincludehelper.inc  glfwdarkheadersupport.inc  openglapiloadhelper.inc  shaderinstence.hpp  singlemobjectwrapper.cc  singlemobjectwrapper.hpp
xcal/scene/: scene.hpp
xcal/scene/core/: abs_frame.hpp  abs_scene.hpp  frame.hpp  scene.hpp
xcal/utils/: logmacrohelper.inc
